--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@
 
   .middle-container {
     display: block;
+    position: relative;
     text-align: center;
     width: 1440px;
     height: 718px;
