--- a/css/styles.css
+++ b/css/styles.css
@@ -116,12 +116,11 @@
 
   .middle-container {
     display: block;
-    position: relative;
     text-align: center;
     width: 1440px;
     height: 718px;
-    margin: 0 auto;
-    padding: 0;
+    margin: 0;
+    padding: 0 auto;
 
   }
 
