--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,8 @@
   }
 
   .middle-container {
-    display: block;
+    display: flex;
+    justify-content: center;
     text-align: center;
     width: 1440px;
     height: 718px;
